# from-VAD-vector-to-String-of-Emotion_onlyCode

./: README.md  requirements.txt
DistillData/: Dockerfile  README.md  config.py  distillation.py  requestHandler_api.py
Visualize_Data/: README.md  visualize.py
benchmark/: bench.py  deltaEGO.py
deltaEGO/: README.md
deltaEGO/deltaEGO/: README.md  pyproject.toml
deltaEGO/deltaEGO/src/deltaEGO/: __init__.py
deltaEGO/deltaEGO_VDB/: CMakeLists.txt  README.md  pyproject.toml  search_input  test.py
deltaEGO/deltaEGO_VDB/VAD/: VAD_customVDB.cpp  VAD_customVDB.hpp
deltaEGO/deltaEGO_VDB/src/: bindings.cpp
deltaEGO/deltaEGO_VDB/src/deltaEGO_VDB/: __init__.py
deltaEGO/deltaEGO_compute/: CMakeLists.txt  LICENSE  README.md  pyproject.toml
deltaEGO/deltaEGO_compute/compute/: EGO_compute.cpp  EGO_compute.hpp  VAD.hpp
deltaEGO/deltaEGO_compute/src/: bindings.cpp
deltaEGO/deltaEGO_compute/src/deltaEGO_compute/: __init__.py
dump/: future_visualization.py
